[FIX] <pro>Table: Fixed that the contents of the filter bar input box are not aligned.

--- a/components-pro/table/style/filter-select.less
+++ b/components-pro/table/style/filter-select.less
@@ -21,7 +21,7 @@
     }
 
     .@{table-prefix-cls}-filter-select-inner-editor {
-      height: @input-height-base - 0.04rem;
+      height: @input-height-base - 0.08rem;
       padding: @input-padding-vertical-base 0;
       background-color: transparent !important;
       border: none;
